Fixed contenteditable bug on iOS

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -40,5 +40,10 @@ button.favorite {
   }
 }
 
+[contenteditable] {
+  -webkit-user-select: text;
+  user-select: text;
+}
+
 @import "../theme/default.theme";
 @import "../theme/dark.theme";
